2016-10-05 rurban

	* ReadKey.pm: renamed to ReadKey_pm.PL,
          expand blockoptions specific variants already at installation,
          demand-load Carp,
          remove unneeded AutoLoader,
          harmonize formatting
        * Configure.pm, genchars.pl: reformatting, support -Dfortify_inc and cperl.
        * Makefile.PL: support ReadKey_pm.PL, add SIGN, fix pure_site_install,
          support dual-life, fix realclean
        * META.yml: removed, auto-generated with make dist

2015-06-04  Jonathan Stowe <jns+git@gellyfish.co.uk>

	* .gitignore, Changes, META.yml, README, ReadKey.pm: Up version

2015-06-04  Jonathan Stowe <jns+git@gellyfish.co.uk>

	* .gitignore: Add .bs file to .gitignore

2015-06-04  Jonathan Stowe <jns@gellyfish.co.uk>

	* : Merge pull request #6 from ntyni/master Make genchars.pl output reproducible by sorting hash keys

2015-04-30  Jonathan Stowe <jns+git@gellyfish.co.uk>

	* Makefile.PL: Fix for "[rt.cpan.org #100932] Parallel build fails"
	from Petr Pisar

2015-04-30  Jonathan Stowe <jns+git@gellyfish.co.uk>

	* MANIFEST.SKIP: Add .git directory to the MANIFEST.SKIP

2015-04-13  Jonathan Stowe <jns+git@gellyfish.co.uk>

	* MANIFEST, MANIFEST.SKIP: Add new artefacts

2015-04-13  Jonathan Stowe <jns+git@gellyfish.co.uk>

	* .travis.yml: Add travis-ci testing

2015-04-13  Jonathan Stowe <jns+git@gellyfish.co.uk>

	* .gitignore: Add .gitignore

2015-04-13  Jonathan Stowe <jns@gellyfish.co.uk>

	* : Merge pull request #5 from
	sdeseille/Create_T_directory_and_split_test.pl Create t directory and split test.pl

2015-04-11  Sébastien Deseille <sebastien.deseille@gmail.com>

	* README: Update README to reflect the move of test.pl in example
	subdirectory

2015-04-11  Sébastien Deseille <sebastien.deseille@gmail.com>

	* README: Revert "Update README to reflect the move of test.pl in
	example subdirectory" This reverts commit 09402dcd68d8d0417e0eb2f9ea0aeaf4b4c72e9a.

2015-04-11  Sébastien Deseille <sebastien.deseille@gmail.com>
